# personal_assistant_agent

./: .gitignore  README.md  personal_assistant.py  pyproject.toml
agents/: calendar_assistant.py  code_assistant.py  search_assistant.py
config/: constants.py  env_setup.py
